--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <div class="hero-text">
                 <div class="hero-subtitle">Born on Friday</div>
                 <h1 class="hero-title">Luxury crafted by <span class="accent">African</span> artisans</h1>
-                <p class="hero-description">Premium intimates, swimwear, and loungewear celebrating African heritage through sustainable luxury and authentic craftsmanship.</p>
+                <p class="hero-description">Premium swimwear, intimates, and loungewear celebrating African heritage through sustainable luxury and authentic craftsmanship.</p>
                 <a href="#collections" class="hero-cta">Explore Collections</a>
             </div>
             <div class="hero-image">
@@ -729,21 +729,21 @@
     <section class="collections" id="collections">
         <div class="section-header">
             <h2 class="section-title">Collections</h2>
-            <p class="section-subtitle">Each piece tells a story of tradition, sustainability, and empowerment—handcrafted by women artisans in Ghana with uncompromising attention to detail.</p>
+            <p class="section-subtitle">Each piece tells a story of tradition, sustainability, and empowerment handcrafted by women artisans in Ghana with uncompromising attention to detail.</p>
         </div>
         <div class="collections-grid">
             <div class="collection-item">
                 <div class="collection-image">Intimates Collection</div>
                 <div class="collection-info">
                     <h3 class="collection-name">Intimates</h3>
-                    <p class="collection-description">Luxurious mulberry silk sets with African-inspired details and contemporary comfort for the modern woman.</p>
+                    <p class="collection-description">Luxurious mulberry silk sets with African-inspired details.</p>
                 </div>
             </div>
             <div class="collection-item">
                 <div class="collection-image">Swimwear Collection</div>
                 <div class="collection-info">
                     <h3 class="collection-name">Swimwear</h3>
-                    <p class="collection-description">Elegant designs featuring traditional prints with sustainable, safe dyes and premium fabrics.</p>
+                    <p class="collection-description">Elegant designs featuring traditional prints with sustainable, safe dyes, and premium fabrics.</p>
                 </div>
             </div>
             <div class="collection-item">
@@ -793,7 +793,7 @@
             <div class="impact-stats">
                 <div class="stat-item">
                     <span class="stat-number">100+</span>
-                    <div class="stat-label">Women Employed</div>
+                    <div class="stat-label">Women Owned and Operated</div>
                 </div>
                 <div class="stat-item">
                     <span class="stat-number">Zero</span>
