--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
             <div class="impact-stats">
                 <div class="stat-item">
                     <span class="stat-number">100+</span>
-                    <div class="stat-label">Women Owned and Operated</div>
+                    <div class="stat-label">Women Employed</div>
                 </div>
                 <div class="stat-item">
                     <span class="stat-number">Zero</span>
